implementing  swagger, controller, models, and routes to successfully communicate the API
